Comment out Step 6 due to errors in delimiter. Add R and RMD project to do so.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,37 +654,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                                                                                                                                                                                       data\n",
-      "NaN        ^DJI     AAPL   AXP   BA     CAT   CSCO  CVX    DD    DIS    GE    GS     HD     IBM    INTC  JNJ    JPM   KO    MCD    MMM    MRK   MSFT  NKE    PFE   PG    TRV    UNH    UTX    V     VZ    WMT   XOM     NaN\n",
-      "20141029.0 16974.31 105.54 87.13 120.07 96.58 23.38 112.38 61.77 87.9   24.76 183.7  94.48  158.69 32.95 102.61 57.73 39.67 89.55  147.31 54.44 45.4  90.94  28.52 83.8  97.18  91.52  103.46 53.28 47.51 74.53 91.59   NaN\n",
-      "20141030.0 17195.42 105.18 87.52 120.8  96.55 23.36 112.44 62.57 88.57  24.76 184.58 95.56  159.55 31.64 104.05 57.82 40.1  90.18  148.38 55.52 44.85 91.98  28.86 84.19 97.75  92.42  103.94 58.74 47.58 74.59 91.45   NaN\n",
-      "20141031.0 17390.52 106.18 88.72 121.86 97.75 23.74 115.08 63.95 89.71  24.9  187.56 95.56  159.6  33.03 104.77 58.88 40.56 90.52  150    56.13 45.73 91.95  28.97 84.5  98.53  93.54  104.59 59.93 47.91 74.41 93.64   NaN\n",
-      "20141103.0 17366.24 107.56 89.61 122.95 96.61 23.85 112.04 63.7  90.04  24.79 188.39 94.16  159.56 33.32 104.46 59.27 40.49 90.4   149.55 57.08 46.2  92.43  29.2  84.61 97.7   93.39  103.9  59.96 48.05 74.42 92.24   NaN\n",
-      "...                                                                                                                                                                                                                     ...\n",
-      "20151020.0 17217.11 113.77 76.95 138.88 69.49 28.5  89.99  57.19 109.84 28.78 185.51 122.85 140.64 33.44 97.59  62.52 42.29 103.84 149.11 50.39 47.77 132.37 34    73.77 108.95 120.42 95.62  76.28 45.24 58.75 80.83   NaN\n",
-      "20151021.0 17168.61 113.76 76.51 141.19 68.9  28.28 89.33  57.28 110.09 28.85 179.7  123.3  140.92 33.37 97.63  62.06 42.19 102.54 149.82 50.59 47.2  132.47 33.46 73.59 110.7  118.11 97.97  75.46 44.86 58.64 80.21   NaN\n",
-      "20151022.0 17489.16 115.5  72.5  146.31 70.88 29.01 91.62  59.19 113.25 29.58 183.56 124.36 144.09 34.4  99.53  63.19 43.24 110.87 156    52.01 48.03 132.41 33.33 74.85 112.32 113.81 99.79  76.42 45.89 58.9  82.89   NaN\n",
-      "20151023.0 17646.7  119.08 74.59 146.7  71.75 29.35 91.24  60.27 113.09 29.51 185.5  124.61 144.68 34.9  100.31 63.87 42.79 112.59 155.79 52.88 52.87 130.53 34.05 77.03 112.28 115.92 100.62 77.07 46.16 58.3  82.98   NaN\n",
-      "20151026.0 17623.05 115.28 74.19 146.7  71.52 28.95 88.77  60.37 113.52 29.55 187.01 125.01 143.66 34.59 99.94  63.9  42.59 112.18 156.54 52.91 54.25 131.38 34.16 77.49 112.77 116.53 100.23 78.18 46.36 58.02 81.22   NaN\n",
-      "\n",
-      "[251 rows x 1 columns]\n"
+     "ename": "ValueError",
+     "evalue": "Data is not being read into separate columns. Check the delimiter.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[74], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m file_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMidtermdata/data.tsv\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Step 1: Read in the data.\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mread_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(data\u001b[38;5;241m.\u001b[39mhead())\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# # Step 2 and 3: Convert to simple returns and annualize.\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# daily_prices = data.drop(columns=data.columns[0])  # Drop the first column if it's an index column.\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m# # Step 6: Print the first five rows and columns of the covariance matrix.\u001b[39;00m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# print(Qts.iloc[:5, :5])\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[73], line 19\u001b[0m, in \u001b[0;36mread_data\u001b[1;34m(file_path)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# Check if the data has been read into separate columns, otherwise raise an error.\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m data\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m---> 19\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mData is not being read into separate columns. Check the delimiter.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# Convert the first column to datetime and set it as the index.\u001b[39;00m\n\u001b[0;32m     22\u001b[0m data\u001b[38;5;241m.\u001b[39miloc[:, \u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(data\u001b[38;5;241m.\u001b[39miloc[:, \u001b[38;5;241m0\u001b[39m], errors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcoerce\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: Data is not being read into separate columns. Check the delimiter."
      ]
     }
    ],
    "source": [
-    "file_path = 'Midtermdata/data.tsv'\n",
+    "# file_path = 'Midtermdata/data.tsv'\n",
     "\n",
-    "# Step 1: Read in the data.\n",
-    "data = read_data(file_path)\n",
+    "# # Step 1: Read in the data.\n",
+    "# data = read_data(file_path)\n",
     "\n",
-    "print(data)\n",
+    "# print(data.head())\n",
     "\n",
     "# # Step 2 and 3: Convert to simple returns and annualize.\n",
     "# daily_prices = data.drop(columns=data.columns[0])  # Drop the first column if it's an index column.\n",
