--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -499,13 +499,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# def read_data(file_path: str) -> pd.DataFrame:\n",
+    "#     \"\"\"\n",
+    "#     Reads the data from a tab-delimited text file into a pandas DataFrame.\n",
+    "\n",
+    "#     Parameters:\n",
+    "#     - file_path (str): The path to the data file.\n",
+    "\n",
+    "#     Returns:\n",
+    "#     - pd.DataFrame: A DataFrame with the Dow-Jones data.\n",
+    "#     \"\"\"\n",
+    "#     # Try to read the data with tab as delimiter; if that fails, try to infer the delimiter.\n",
+    "#     try:\n",
+    "#         data = pd.read_csv(file_path, delimiter='\\t')\n",
+    "#     except pd.errors.ParserError:\n",
+    "#         data = pd.read_csv(file_path, delimiter=None, engine='python')\n",
+    "    \n",
+    "#     # Check if the data has been read into separate columns, otherwise raise an error.\n",
+    "#     if data.shape[1] == 1:\n",
+    "#         raise ValueError(\"Data is not being read into separate columns. Check the delimiter.\")\n",
+    "    \n",
+    "#     # Convert the first column to datetime and set it as the index.\n",
+    "#     data.iloc[:, 0] = pd.to_datetime(data.iloc[:, 0], errors='coerce')\n",
+    "#     data.set_index(data.columns[0], inplace=True)\n",
+    "    \n",
+    "#     return data\n",
+    "\n",
     "def read_data(file_path: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
-    "    Reads the data from a tab-delimited text file into a pandas DataFrame.\n",
+    "    Reads the data from a comma-delimited text file into a pandas DataFrame.\n",
     "\n",
     "    Parameters:\n",
     "    - file_path (str): The path to the data file.\n",
@@ -513,20 +539,8 @@
     "    Returns:\n",
     "    - pd.DataFrame: A DataFrame with the Dow-Jones data.\n",
     "    \"\"\"\n",
-    "    # Try to read the data with tab as delimiter; if that fails, try to infer the delimiter.\n",
-    "    try:\n",
-    "        data = pd.read_csv(file_path, delimiter='\\t')\n",
-    "    except pd.errors.ParserError:\n",
-    "        data = pd.read_csv(file_path, delimiter=None, engine='python')\n",
-    "    \n",
-    "    # Check if the data has been read into separate columns, otherwise raise an error.\n",
-    "    if data.shape[1] == 1:\n",
-    "        raise ValueError(\"Data is not being read into separate columns. Check the delimiter.\")\n",
-    "    \n",
-    "    # Convert the first column to datetime and set it as the index.\n",
-    "    data.iloc[:, 0] = pd.to_datetime(data.iloc[:, 0], errors='coerce')\n",
-    "    data.set_index(data.columns[0], inplace=True)\n",
-    "    \n",
+    "    # Read in the comma-delimited text file.\n",
+    "    data = pd.read_csv(file_path)\n",
     "    return data"
    ]
   },
@@ -654,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -664,36 +678,36 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[74], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m file_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMidtermdata/data.tsv\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Step 1: Read in the data.\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mread_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(data\u001b[38;5;241m.\u001b[39mhead())\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# # Step 2 and 3: Convert to simple returns and annualize.\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# daily_prices = data.drop(columns=data.columns[0])  # Drop the first column if it's an index column.\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m# # Step 6: Print the first five rows and columns of the covariance matrix.\u001b[39;00m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# print(Qts.iloc[:5, :5])\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[77], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m file_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMidtermdata/data.tsv\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Step 1: Read in the data.\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mread_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(data\u001b[38;5;241m.\u001b[39mhead())\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Step 2 and 3: Convert to simple returns and annualize.\u001b[39;00m\n",
       "Cell \u001b[1;32mIn[73], line 19\u001b[0m, in \u001b[0;36mread_data\u001b[1;34m(file_path)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# Check if the data has been read into separate columns, otherwise raise an error.\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m data\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m---> 19\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mData is not being read into separate columns. Check the delimiter.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# Convert the first column to datetime and set it as the index.\u001b[39;00m\n\u001b[0;32m     22\u001b[0m data\u001b[38;5;241m.\u001b[39miloc[:, \u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(data\u001b[38;5;241m.\u001b[39miloc[:, \u001b[38;5;241m0\u001b[39m], errors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcoerce\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
       "\u001b[1;31mValueError\u001b[0m: Data is not being read into separate columns. Check the delimiter."
      ]
     }
    ],
    "source": [
-    "# file_path = 'Midtermdata/data.tsv'\n",
+    "file_path = 'Midtermdata/data.tsv'\n",
     "\n",
-    "# # Step 1: Read in the data.\n",
-    "# data = read_data(file_path)\n",
+    "# Step 1: Read in the data.\n",
+    "data = read_data(file_path)\n",
     "\n",
-    "# print(data.head())\n",
+    "print(data.head())\n",
     "\n",
-    "# # Step 2 and 3: Convert to simple returns and annualize.\n",
-    "# daily_prices = data.drop(columns=data.columns[0])  # Drop the first column if it's an index column.\n",
+    "# Step 2 and 3: Convert to simple returns and annualize.\n",
+    "daily_prices = data.drop(columns=data.columns[0])  # Drop the first column if it's an index column.\n",
     "\n",
-    "# print(daily_prices)\n",
+    "print(daily_prices)\n",
     "\n",
-    "# daily_returns = calculate_simple_returns(daily_prices)\n",
-    "# annual_returns = annualize_returns(daily_returns)\n",
+    "daily_returns = calculate_simple_returns(daily_prices)\n",
+    "annual_returns = annualize_returns(daily_returns)\n",
     "\n",
-    "# # Step 4: Move the index column out of the matrix.\n",
-    "# data_without_index, index_column = extract_index(data)\n",
+    "# Step 4: Move the index column out of the matrix.\n",
+    "data_without_index, index_column = extract_index(data)\n",
     "\n",
-    "# # Step 5: Compute the covariance matrix.\n",
-    "# Qts = compute_covariance_matrix(annual_returns)\n",
+    "# Step 5: Compute the covariance matrix.\n",
+    "Qts = compute_covariance_matrix(annual_returns)\n",
     "\n",
-    "# # Step 6: Print the first five rows and columns of the covariance matrix.\n",
-    "# print(Qts.iloc[:5, :5])"
+    "# Step 6: Print the first five rows and columns of the covariance matrix.\n",
+    "print(Qts.iloc[:5, :5])"
    ]
   }
  ],
