--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -531,16 +531,27 @@
     "\n",
     "def read_data(file_path: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
-    "    Reads the data from a comma-delimited text file into a pandas DataFrame.\n",
+    "    Reads the data from a comma-delimited text file into a pandas DataFrame, \n",
+    "    setting the first row as the header and the first column as a DateTime index.\n",
     "\n",
     "    Parameters:\n",
     "    - file_path (str): The path to the data file.\n",
     "\n",
     "    Returns:\n",
-    "    - pd.DataFrame: A DataFrame with the Dow-Jones data.\n",
+    "    - pd.DataFrame: A DataFrame with the Dow-Jones data, with correct column names and a DateTime index.\n",
     "    \"\"\"\n",
-    "    # Read in the comma-delimited text file.\n",
-    "    data = pd.read_csv(file_path)\n",
+    "    # Read in the comma-delimited text file, setting the first row as the header.\n",
+    "    data = pd.read_csv(file_path, header=0)\n",
+    "    \n",
+    "    # Rename the first column to 'Date' for clarity.\n",
+    "    data.rename(columns={data.columns[0]: 'Date'}, inplace=True)\n",
+    "    \n",
+    "    # Convert the 'Date' column to a DateTime format.\n",
+    "    data['Date'] = pd.to_datetime(data['Date'], format='%Y%m%d')\n",
+    "    \n",
+    "    # Set the 'Date' column as the index of the DataFrame.\n",
+    "    data.set_index('Date', inplace=True)\n",
+    "    \n",
     "    return data"
    ]
   },
@@ -553,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,46 +679,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Data is not being read into separate columns. Check the delimiter.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[77], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m file_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMidtermdata/data.tsv\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Step 1: Read in the data.\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mread_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(data\u001b[38;5;241m.\u001b[39mhead())\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Step 2 and 3: Convert to simple returns and annualize.\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[73], line 19\u001b[0m, in \u001b[0;36mread_data\u001b[1;34m(file_path)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# Check if the data has been read into separate columns, otherwise raise an error.\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m data\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m---> 19\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mData is not being read into separate columns. Check the delimiter.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# Convert the first column to datetime and set it as the index.\u001b[39;00m\n\u001b[0;32m     22\u001b[0m data\u001b[38;5;241m.\u001b[39miloc[:, \u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(data\u001b[38;5;241m.\u001b[39miloc[:, \u001b[38;5;241m0\u001b[39m], errors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcoerce\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: Data is not being read into separate columns. Check the delimiter."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         data Unnamed: 1 Unnamed: 2 Unnamed: 3 Unnamed: 4 Unnamed: 5   \n",
+      "0         NaN       ^DJI       AAPL        AXP         BA        CAT  \\\n",
+      "1  20141029.0   16974.31     105.54      87.13     120.07      96.58   \n",
+      "2  20141030.0   17195.42     105.18      87.52      120.8      96.55   \n",
+      "3  20141031.0   17390.52     106.18      88.72     121.86      97.75   \n",
+      "4  20141103.0   17366.24     107.56      89.61     122.95      96.61   \n",
+      "\n",
+      "  Unnamed: 6 Unnamed: 7 Unnamed: 8 Unnamed: 9  ... Unnamed: 22 Unnamed: 23   \n",
+      "0       CSCO        CVX         DD        DIS  ...         NKE         PFE  \\\n",
+      "1      23.38     112.38      61.77       87.9  ...       90.94       28.52   \n",
+      "2      23.36     112.44      62.57      88.57  ...       91.98       28.86   \n",
+      "3      23.74     115.08      63.95      89.71  ...       91.95       28.97   \n",
+      "4      23.85     112.04       63.7      90.04  ...       92.43        29.2   \n",
+      "\n",
+      "  Unnamed: 24 Unnamed: 25 Unnamed: 26 Unnamed: 27 Unnamed: 28 Unnamed: 29   \n",
+      "0          PG         TRV         UNH         UTX           V          VZ  \\\n",
+      "1        83.8       97.18       91.52      103.46       53.28       47.51   \n",
+      "2       84.19       97.75       92.42      103.94       58.74       47.58   \n",
+      "3        84.5       98.53       93.54      104.59       59.93       47.91   \n",
+      "4       84.61        97.7       93.39       103.9       59.96       48.05   \n",
+      "\n",
+      "  Unnamed: 30 Unnamed: 31  \n",
+      "0         WMT         XOM  \n",
+      "1       74.53       91.59  \n",
+      "2       74.59       91.45  \n",
+      "3       74.41       93.64  \n",
+      "4       74.42       92.24  \n",
+      "\n",
+      "[5 rows x 32 columns]\n"
      ]
     }
    ],
    "source": [
-    "file_path = 'Midtermdata/data.tsv'\n",
+    "# file_path = 'Midtermdata/data.tsv'\n",
+    "file_path = 'Midtermdata/data.csv'\n",
     "\n",
     "# Step 1: Read in the data.\n",
     "data = read_data(file_path)\n",
     "\n",
     "print(data.head())\n",
     "\n",
-    "# Step 2 and 3: Convert to simple returns and annualize.\n",
-    "daily_prices = data.drop(columns=data.columns[0])  # Drop the first column if it's an index column.\n",
+    "# # Step 2 and 3: Convert to simple returns and annualize.\n",
+    "# daily_prices = data.drop(columns=data.columns[0])  # Drop the first column if it's an index column.\n",
     "\n",
-    "print(daily_prices)\n",
+    "# print(daily_prices)\n",
     "\n",
-    "daily_returns = calculate_simple_returns(daily_prices)\n",
-    "annual_returns = annualize_returns(daily_returns)\n",
+    "# daily_returns = calculate_simple_returns(daily_prices)\n",
+    "# annual_returns = annualize_returns(daily_returns)\n",
     "\n",
-    "# Step 4: Move the index column out of the matrix.\n",
-    "data_without_index, index_column = extract_index(data)\n",
+    "# # Step 4: Move the index column out of the matrix.\n",
+    "# data_without_index, index_column = extract_index(data)\n",
     "\n",
-    "# Step 5: Compute the covariance matrix.\n",
-    "Qts = compute_covariance_matrix(annual_returns)\n",
+    "# # Step 5: Compute the covariance matrix.\n",
+    "# Qts = compute_covariance_matrix(annual_returns)\n",
     "\n",
-    "# Step 6: Print the first five rows and columns of the covariance matrix.\n",
-    "print(Qts.iloc[:5, :5])"
+    "# # Step 6: Print the first five rows and columns of the covariance matrix.\n",
+    "# print(Qts.iloc[:5, :5])"
    ]
   }
  ],
