--- a/FE630 - Midterm/FE630 - Midterm ~ Q4 - Q6.Rmd
+++ b/FE630 - Midterm/FE630 - Midterm ~ Q4 - Q6.Rmd
@@ -1,19 +1,33 @@
 ---
 title: "FE630 - Midterm Project ~ Q4 - Q6"
-subtitle: "I pledge my honor that I have abided by the Stevens Honor System."
 author: "Sid Bhatia"
 date: "2024-03-26"
-output: pdf_document
+output:
+  html_document:
+    df_print: paged
+subtitle: I pledge my honor that I have abided by the Stevens Honor System.
 ---
 
 #### Question 4. (15 pts)
 
 ```{r}
 library(tidyverse)
+library(lubridate)
 
-# Function to read the data
+# Function to read the data and set the first column as a DateTime index
 read_data <- function(file_path) {
-  data <- read_csv(file_path)
+  # Read the data, assuming the first row is the header
+  data <- read.csv(file_path, header = TRUE)
+  
+  # Convert the first column to Date format assuming it's in 'YYYYMMDD' format
+  # Assuming the first column is named 'Date' or similar; adjust accordingly
+  data[,1] <- ymd(data[,1])
+  
+  # Set the first column as row names if needed or keep as a separate Date column
+  # Optionally, you can make the date column as row names (not always recommended for time series data in R)
+  # rownames(data) <- data[,1]
+  # data <- data[,-1]
+  
   return(data)
 }
 
@@ -35,28 +49,60 @@ compute_covariance_matrix <- function(returns) {
   Qts <- cov(returns)
   return(Qts)
 }
+```
 
-# Set the file path
-file_path <- "Midtermdata/data.csv" # Assuming the file extension is .csv for comma-delimited files
+#### Pre-Processing
 
+```{r}
 # Step 1: Read in the data
-data <- read_data(file_path)
+file_path <- "Midtermdata/data.csv"
+
+# Read the CSV file, making sure the first row is used as column names.
+data <- read.csv(file_path, header = TRUE, check.names = FALSE)
+
+# Set the value in the first row, first column to "Date"
+data[1, 1] <- "Date"
+
+# Now, use the first row to set column names and remove the first row from the data
+colnames(data) <- as.character(unlist(data[1, ]))
+data <- data[-1, ]
+
+# Assuming 'data' is your dataframe and 'Date' is the column with dates in YYYYMMDD format
+data$Date <- as.Date(as.character(data$Date), format="%Y%m%d")
 
 # Assuming the first column is the date, and the rest are the prices
-dates <- data[[1]] # Extract the first column as dates
-prices <- data[-1] # Remove the first column from the data
+data[,-1] <- sapply(data[,-1], as.numeric)
 
-# Convert the first column to dates if it's not already
-dates <- as.Date(as.character(dates), format="%Y%m%d")
+head(data)
+```
 
-# Step 2 and 3: Convert to simple returns and annualize
-daily_returns <- calculate_simple_returns(prices)
-annual_returns <- annualize_returns(daily_returns)
 
-# Step 5: Compute the covariance matrix
-Qts <- compute_covariance_matrix(annual_returns)
+```{r}
+# dates <- data[[1]] # Extract the first column as dates
+# prices <- data[-1] # Remove the first column from the data
+# 
+# # Convert the first column to dates if it's not already
+# dates <- as.Date(as.character(dates), format="%Y%m%d")
 
-# Step 6: Print out the first five rows and columns of the covariance matrix
+# Step 2: Calculate daily returns.
+daily_returns <- data[, -1] / lag(data[, -1]) - 1
+daily_returns <- daily_returns[-1, ]  # Remove the first row which will be NA.
+
+print(head(daily_returns))
+
+# Step 3: Annualize the daily returns.
+annual_returns <- apply(daily_returns, 2, mean, na.rm = TRUE) * 252
+
+print(annual_returns)
+
+# Step 4: Extract the index column.
+## Already did in pre-processing.
+
+# Step 5: Compute the covariance matrix of daily returns.
+Qts <- cov(daily_returns, use = "pairwise.complete.obs")
+
+# Step 6: Print out the first five rows and columns of the covariance matrix.
 print(Qts[1:5, 1:5])
 ```
+
 
