--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,17 +540,14 @@
     "    Returns:\n",
     "    - pd.DataFrame: A DataFrame with the Dow-Jones data, with correct column names and a DateTime index.\n",
     "    \"\"\"\n",
-    "    # Read in the comma-delimited text file, setting the first row as the header.\n",
+    "    # Read the file, explicitly mentioning that the first row should be used as the header\n",
     "    data = pd.read_csv(file_path, header=0)\n",
     "    \n",
-    "    # Rename the first column to 'Date' for clarity.\n",
-    "    data.rename(columns={data.columns[0]: 'Date'}, inplace=True)\n",
-    "    \n",
-    "    # Convert the 'Date' column to a DateTime format.\n",
-    "    data['Date'] = pd.to_datetime(data['Date'], format='%Y%m%d')\n",
-    "    \n",
-    "    # Set the 'Date' column as the index of the DataFrame.\n",
-    "    data.set_index('Date', inplace=True)\n",
+    "    # Correctly set the first column's name and use it as the index\n",
+    "    # Assuming the first column contains the date in 'YYYYMMDD' format and needs conversion to DateTime type\n",
+    "    data.columns = ['Date'] + [f'{col}' for col in data.columns[1:]]  # Rename columns to fix 'Unnamed: X' issue\n",
+    "    data['Date'] = pd.to_datetime(data['Date'], format='%Y%m%d')  # Convert the 'Date' column to DateTime\n",
+    "    data.set_index('Date', inplace=True)  # Set the 'Date' column as the index\n",
     "    \n",
     "    return data"
    ]
@@ -564,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,42 +676,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         data Unnamed: 1 Unnamed: 2 Unnamed: 3 Unnamed: 4 Unnamed: 5   \n",
-      "0         NaN       ^DJI       AAPL        AXP         BA        CAT  \\\n",
-      "1  20141029.0   16974.31     105.54      87.13     120.07      96.58   \n",
-      "2  20141030.0   17195.42     105.18      87.52      120.8      96.55   \n",
-      "3  20141031.0   17390.52     106.18      88.72     121.86      97.75   \n",
-      "4  20141103.0   17366.24     107.56      89.61     122.95      96.61   \n",
+      "           Unnamed: 1 Unnamed: 2 Unnamed: 3 Unnamed: 4 Unnamed: 5 Unnamed: 6   \n",
+      "Date                                                                           \n",
+      "NaT              ^DJI       AAPL        AXP         BA        CAT       CSCO  \\\n",
+      "2014-10-29   16974.31     105.54      87.13     120.07      96.58      23.38   \n",
+      "2014-10-30   17195.42     105.18      87.52      120.8      96.55      23.36   \n",
+      "2014-10-31   17390.52     106.18      88.72     121.86      97.75      23.74   \n",
+      "2014-11-03   17366.24     107.56      89.61     122.95      96.61      23.85   \n",
       "\n",
-      "  Unnamed: 6 Unnamed: 7 Unnamed: 8 Unnamed: 9  ... Unnamed: 22 Unnamed: 23   \n",
-      "0       CSCO        CVX         DD        DIS  ...         NKE         PFE  \\\n",
-      "1      23.38     112.38      61.77       87.9  ...       90.94       28.52   \n",
-      "2      23.36     112.44      62.57      88.57  ...       91.98       28.86   \n",
-      "3      23.74     115.08      63.95      89.71  ...       91.95       28.97   \n",
-      "4      23.85     112.04       63.7      90.04  ...       92.43        29.2   \n",
+      "           Unnamed: 7 Unnamed: 8 Unnamed: 9 Unnamed: 10  ... Unnamed: 22   \n",
+      "Date                                                     ...               \n",
+      "NaT               CVX         DD        DIS          GE  ...         NKE  \\\n",
+      "2014-10-29     112.38      61.77       87.9       24.76  ...       90.94   \n",
+      "2014-10-30     112.44      62.57      88.57       24.76  ...       91.98   \n",
+      "2014-10-31     115.08      63.95      89.71        24.9  ...       91.95   \n",
+      "2014-11-03     112.04       63.7      90.04       24.79  ...       92.43   \n",
       "\n",
-      "  Unnamed: 24 Unnamed: 25 Unnamed: 26 Unnamed: 27 Unnamed: 28 Unnamed: 29   \n",
-      "0          PG         TRV         UNH         UTX           V          VZ  \\\n",
-      "1        83.8       97.18       91.52      103.46       53.28       47.51   \n",
-      "2       84.19       97.75       92.42      103.94       58.74       47.58   \n",
-      "3        84.5       98.53       93.54      104.59       59.93       47.91   \n",
-      "4       84.61        97.7       93.39       103.9       59.96       48.05   \n",
+      "           Unnamed: 23 Unnamed: 24 Unnamed: 25 Unnamed: 26 Unnamed: 27   \n",
+      "Date                                                                     \n",
+      "NaT                PFE          PG         TRV         UNH         UTX  \\\n",
+      "2014-10-29       28.52        83.8       97.18       91.52      103.46   \n",
+      "2014-10-30       28.86       84.19       97.75       92.42      103.94   \n",
+      "2014-10-31       28.97        84.5       98.53       93.54      104.59   \n",
+      "2014-11-03        29.2       84.61        97.7       93.39       103.9   \n",
       "\n",
-      "  Unnamed: 30 Unnamed: 31  \n",
-      "0         WMT         XOM  \n",
-      "1       74.53       91.59  \n",
-      "2       74.59       91.45  \n",
-      "3       74.41       93.64  \n",
-      "4       74.42       92.24  \n",
+      "           Unnamed: 28 Unnamed: 29 Unnamed: 30 Unnamed: 31  \n",
+      "Date                                                        \n",
+      "NaT                  V          VZ         WMT         XOM  \n",
+      "2014-10-29       53.28       47.51       74.53       91.59  \n",
+      "2014-10-30       58.74       47.58       74.59       91.45  \n",
+      "2014-10-31       59.93       47.91       74.41       93.64  \n",
+      "2014-11-03       59.96       48.05       74.42       92.24  \n",
       "\n",
-      "[5 rows x 32 columns]\n"
+      "[5 rows x 31 columns]\n"
      ]
     }
    ],
