--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -499,35 +499,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def read_data(file_path: str) -> pd.DataFrame:\n",
-    "#     \"\"\"\n",
-    "#     Reads the data from a tab-delimited text file into a pandas DataFrame.\n",
+    "def read_data(file_path: str) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Reads the data from a tab-delimited text file into a pandas DataFrame.\n",
     "\n",
-    "#     Parameters:\n",
-    "#     - file_path (str): The path to the data file.\n",
+    "    Parameters:\n",
+    "    - file_path (str): The path to the data file.\n",
     "\n",
-    "#     Returns:\n",
-    "#     - pd.DataFrame: A DataFrame with the Dow-Jones data.\n",
-    "#     \"\"\"\n",
-    "#     # Try to read the data with tab as delimiter; if that fails, try to infer the delimiter.\n",
-    "#     try:\n",
-    "#         data = pd.read_csv(file_path, delimiter='\\t')\n",
-    "#     except pd.errors.ParserError:\n",
-    "#         data = pd.read_csv(file_path, delimiter=None, engine='python')\n",
+    "    Returns:\n",
+    "    - pd.DataFrame: A DataFrame with the Dow-Jones data.\n",
+    "    \"\"\"\n",
+    "    # Try to read the data with tab as delimiter; if that fails, try to infer the delimiter.\n",
+    "    try:\n",
+    "        data = pd.read_csv(file_path, delimiter='\\t')\n",
+    "    except pd.errors.ParserError:\n",
+    "        data = pd.read_csv(file_path, delimiter=None, engine='python')\n",
     "    \n",
-    "#     # Check if the data has been read into separate columns, otherwise raise an error.\n",
-    "#     if data.shape[1] == 1:\n",
-    "#         raise ValueError(\"Data is not being read into separate columns. Check the delimiter.\")\n",
+    "    # Check if the data has been read into separate columns, otherwise raise an error.\n",
+    "    if data.shape[1] == 1:\n",
+    "        raise ValueError(\"Data is not being read into separate columns. Check the delimiter.\")\n",
     "    \n",
-    "#     # Convert the first column to datetime and set it as the index.\n",
-    "#     data.iloc[:, 0] = pd.to_datetime(data.iloc[:, 0], errors='coerce')\n",
-    "#     data.set_index(data.columns[0], inplace=True)\n",
+    "    # Convert the first column to datetime and set it as the index.\n",
+    "    data.iloc[:, 0] = pd.to_datetime(data.iloc[:, 0], errors='coerce')\n",
+    "    data.set_index(data.columns[0], inplace=True)\n",
     "    \n",
-    "#     return data\n",
+    "    return data\n",
     "\n",
     "def read_data(file_path: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -721,12 +721,12 @@
    ],
    "source": [
     "# file_path = 'Midtermdata/data.tsv'\n",
-    "file_path = 'Midtermdata/data.csv'\n",
+    "# file_path = 'Midtermdata/data.csv'\n",
     "\n",
-    "# Step 1: Read in the data.\n",
-    "data = read_data(file_path)\n",
+    "# # Step 1: Read in the data.\n",
+    "# data = read_data(file_path)\n",
     "\n",
-    "print(data.head())\n",
+    "# print(data.head())\n",
     "\n",
     "# # Step 2 and 3: Convert to simple returns and annualize.\n",
     "# daily_prices = data.drop(columns=data.columns[0])  # Drop the first column if it's an index column.\n",
@@ -744,6 +744,191 @@
     "\n",
     "# # Step 6: Print the first five rows and columns of the covariance matrix.\n",
     "# print(Qts.iloc[:5, :5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Implementation in R"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following section implements the same concepts as above but in R as parsing the data was easier and more efficient in R."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```r\n",
+    "library(tidyverse)\n",
+    "library(lubridate)\n",
+    "\n",
+    "# Function to read the data and set the first column as a DateTime index\n",
+    "read_data <- function(file_path) {\n",
+    "  # Read the data, assuming the first row is the header\n",
+    "  data <- read.csv(file_path, header = TRUE)\n",
+    "  \n",
+    "  # Convert the first column to Date format assuming it's in 'YYYYMMDD' format\n",
+    "  # Assuming the first column is named 'Date' or similar; adjust accordingly\n",
+    "  data[,1] <- ymd(data[,1])\n",
+    "  \n",
+    "  # Set the first column as row names if needed or keep as a separate Date column\n",
+    "  # Optionally, you can make the date column as row names (not always recommended for time series data in R)\n",
+    "  # rownames(data) <- data[,1]\n",
+    "  # data <- data[,-1]\n",
+    "  \n",
+    "  return(data)\n",
+    "}\n",
+    "\n",
+    "# Function to calculate simple returns\n",
+    "calculate_simple_returns <- function(prices) {\n",
+    "  returns <- prices / lag(prices) - 1\n",
+    "  returns <- na.omit(returns)  # Remove NA values resulted from lagging\n",
+    "  return(returns)\n",
+    "}\n",
+    "\n",
+    "# Function to annualize returns\n",
+    "annualize_returns <- function(returns) {\n",
+    "  annual_returns <- returns * 252\n",
+    "  return(annual_returns)\n",
+    "}\n",
+    "\n",
+    "# Function to compute the covariance matrix\n",
+    "compute_covariance_matrix <- function(returns) {\n",
+    "  Qts <- cov(returns)\n",
+    "  return(Qts)\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Pre-Processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```r\n",
+    "# Step 1: Read in the data\n",
+    "file_path <- \"Midtermdata/data.csv\"\n",
+    "\n",
+    "# Read the CSV file, making sure the first row is used as column names.\n",
+    "data <- read.csv(file_path, header = TRUE, check.names = FALSE)\n",
+    "\n",
+    "# Set the value in the first row, first column to \"Date\"\n",
+    "data[1, 1] <- \"Date\"\n",
+    "\n",
+    "# Now, use the first row to set column names and remove the first row from the data\n",
+    "colnames(data) <- as.character(unlist(data[1, ]))\n",
+    "data <- data[-1, ]\n",
+    "\n",
+    "# Assuming 'data' is your dataframe and 'Date' is the column with dates in YYYYMMDD format\n",
+    "data$Date <- as.Date(as.character(data$Date), format=\"%Y%m%d\")\n",
+    "\n",
+    "# Assuming the first column is the date, and the rest are the prices\n",
+    "data[,-1] <- sapply(data[,-1], as.numeric)\n",
+    "\n",
+    "head(data)\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```r\n",
+    "# dates <- data[[1]] # Extract the first column as dates\n",
+    "# prices <- data[-1] # Remove the first column from the data\n",
+    "# \n",
+    "# # Convert the first column to dates if it's not already\n",
+    "# dates <- as.Date(as.character(dates), format=\"%Y%m%d\")\n",
+    "\n",
+    "# Step 2: Calculate daily returns.\n",
+    "daily_returns <- data[, -1] / lag(data[, -1]) - 1\n",
+    "daily_returns <- daily_returns[-1, ]  # Remove the first row which will be NA.\n",
+    "\n",
+    "print(head(daily_returns))\n",
+    "\n",
+    "# Step 3: Annualize the daily returns.\n",
+    "annual_returns <- apply(daily_returns, 2, mean, na.rm = TRUE) * 252\n",
+    "\n",
+    "print(annual_returns)\n",
+    "\n",
+    "# Step 4: Extract the index column.\n",
+    "## Already did in pre-processing.\n",
+    "\n",
+    "# Step 5: Compute the covariance matrix of daily returns.\n",
+    "Qts <- cov(daily_returns, use = \"pairwise.complete.obs\")\n",
+    "\n",
+    "# Step 6: Print out the first five rows and columns of the covariance matrix.\n",
+    "print(Qts[1:5, 1:5])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The table below shows the annualized returns for selected stocks:\n",
+    "\n",
+    "| Ticker | Annualized Return |\n",
+    "| ------ | ----------------- |\n",
+    "| ^DJI   | 4.91%             |\n",
+    "| AAPL   | 12.34%            |\n",
+    "| AXP    | -13.92%           |\n",
+    "| BA     | 22.56%            |\n",
+    "| CAT    | -27.28%           |\n",
+    "| CSCO   | 24.10%            |\n",
+    "| CVX    | -20.34%           |\n",
+    "| DD     | 0.44%             |\n",
+    "| DIS    | 28.20%            |\n",
+    "| GE     | 20.38%            |\n",
+    "| GS     | 3.93%             |\n",
+    "| HD     | 30.27%            |\n",
+    "| IBM    | -7.88%            |\n",
+    "| INTC   | 8.08%             |\n",
+    "| JNJ    | -1.32%            |\n",
+    "| JPM    | 12.55%            |\n",
+    "| KO     | 8.23%             |\n",
+    "| MCD    | 24.77%            |\n",
+    "| MMM    | 7.65%             |\n",
+    "| MRK    | -0.56%            |\n",
+    "| MSFT   | 21.98%            |\n",
+    "| NKE    | 39.47%            |\n",
+    "| PFE    | 19.97%            |\n",
+    "| PG     | -6.73%            |\n",
+    "| TRV    | 16.45%            |\n",
+    "| UNH    | 27.39%            |\n",
+    "| UTX    | -1.26%            |\n",
+    "| V      | 41.52%            |\n",
+    "| VZ     | -1.20%            |\n",
+    "| WMT    | -23.16%           |\n",
+    "| XOM    | -9.78%            |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below is the covariance matrix for a subset of the stocks:\n",
+    "\n",
+    "```plaintext\n",
+    "             ^DJI         AAPL          AXP           BA          CAT\n",
+    "^DJI 8.873133e-05 1.010457e-04 7.573449e-05 9.047886e-05 9.436840e-05\n",
+    "AAPL 1.010457e-04 2.706878e-04 8.131692e-05 1.278212e-04 1.181664e-04\n",
+    "AXP  7.573449e-05 8.131692e-05 1.858309e-04 5.841554e-05 7.909844e-05\n",
+    "BA   9.047886e-05 1.278212e-04 5.841554e-05 1.823244e-04 9.310019e-05\n",
+    "CAT  9.436840e-05 1.181664e-04 7.909844e-05 9.310019e-05 2.454428e-04\n",
+    "```"
    ]
   }
  ],
