--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -930,6 +930,34 @@
     "CAT  9.436840e-05 1.181664e-04 7.909844e-05 9.310019e-05 2.454428e-04\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Question 5. (20 pts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given $n$ securities $S_i, (i = 1, \\dots, 30),$ the single index model for their securities’ returns is given by $$r_i = \\alpha_i + \\beta_i r_M + \\epsilon_i$$ where $r_M$ is the return of the Index (here the Dow Jones), $\\epsilon_i$ is a random variable specific to Security $S_i$ satisfies $$\\mathbb{E}[\\epsilon_i] = 0, \\; cov(\\epsilon_i, r_M) = 0, \\; \\text{if} \\; i \\neq j$$ where $\\sigma^2_M$ is the variance of the Index, and $\\sigma^2_{R_i}$ is the variance of the residual $\\epsilon_i$ for security $S_i$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program utilizing the Dow-Jones data that:\n",
+    "1. uses a loop to regress each company’s returns onto the index return,\n",
+    "2. prints a table of intercepts, slopes ($\\beta_i$), and idiosyncratic standard deviations $\\sigma_{R_i}$ (standard deviation of the residuals) for all companies $i = 1, \\dots, 30$,\n",
+    "3. computes and prints the variance of the index’s return,\n",
+    "4. computes and prints the variance of the index’s return, $\\texttt{Qts}$ using your computed $\\sigma^2_M$, $\\beta_i$, and $\\sigma^2_{R_i}$, for all $i$, and\n",
+    "5. prints the first five rows and columns of this covariance matrix.\n",
+    "\n",
+    "Clearly describe all steps in your program with comments. List your program in your answer document. No points will be awarded unless the steps associated with each part of the question are clearly distinguished. Also, submit the source code file."
+   ]
   }
  ],
  "metadata": {
