--- a/FE630 - Midterm/FE630 - Midterm ~ Q4 - Q6.Rmd
+++ b/FE630 - Midterm/FE630 - Midterm ~ Q4 - Q6.Rmd
@@ -108,9 +108,9 @@ print(Qts[1:5, 1:5])
 #### Question 5. (20 pts)
 
 ```{r}
-# 1. Pre-process the Data: Already done, moving to regression
+# 0. Pre-process the Data: Already done, moving to regression
 
-# 2. Conduct the regressional analysis
+# Step 1. Conduct the regressional analysis
 results <- list() # To store regression results
 
 for(i in 3:ncol(data)){
@@ -123,13 +123,17 @@ for(i in 3:ncol(data)){
   results[[colnames(data)[i]]] <- c(alpha_i, beta_i, sigma_R_i)
 }
 
-# Creating a data frame from the results list for better visualization
+# Step 2. Creating a data frame from the results list for better visualization
 results_df <- do.call(rbind, results)
 colnames(results_df) <- c("Intercept", "Beta", "Sigma_R")
 rownames(results_df) <- names(results)
 
-# Printing the results table
+# Step 2. Printing the results table
 print(results_df)
+
+# Step 3: Compute and print the variance of the index's return
+sigma_M_squared <- var(data[,2]) # Assuming the 2nd column is the DJI
+print(sigma_M_squared)
 ```
 
 
