--- a/FE630 - Midterm/FE630 - Midterm ~ Q4 - Q6.Rmd
+++ b/FE630 - Midterm/FE630 - Midterm ~ Q4 - Q6.Rmd
@@ -139,7 +139,7 @@ sigma_M_squared <- var(data[,2]) # Assuming the 2nd column is the DJI
 print(sigma_M_squared)
 
 # Step 4. Compute the covariance matrix: Using formula sigma^2_M * Beta_i * Beta_j + delta_ij * sigma^2_Ri
-# Here, delta_ij is the Kronecker delta, which is 1 if i = j and 0 otherwise
+## Here, delta_ij is the Kronecker delta, which is 1 if i = j and 0 otherwise
 Qts <- matrix(nrow=30, ncol=30)
 
 for(i in 1:nrow(results_df)){
@@ -153,6 +153,9 @@ for(i in 1:nrow(results_df)){
     }
   }
 }
+
+# 5. Print the first five rows and columns of the covariance matrix.
+print(Qts[1:5, 1:5])
 ```
 
 
