Add results_df in Markdown.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -983,6 +983,44 @@
     "print(Qts[1:5, 1:5])\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|       | Intercept   | Beta          | Sigma_R    |\n",
+    "|-------|-------------|---------------|------------|\n",
+    "| AAPL  | -44.113438  | 0.0092603548  | 5.9559090  |\n",
+    "| AXP   | 26.954988   | 0.0030676210  | 5.1682927  |\n",
+    "| BA    | -2.069516   | 0.0080176033  | 7.9228769  |\n",
+    "| CAT   | -57.771249  | 0.0079356594  | 6.7220955  |\n",
+    "| CSCO  | 1.308190    | 0.0014745322  | 0.9932658  |\n",
+    "| CVX   | -163.948667 | 0.0149088567  | 7.0677293  |\n",
+    "| DD    | -123.711973 | 0.0106266070  | 4.3608027  |\n",
+    "| DIS   | 40.224863   | 0.0035978044  | 8.4461406  |\n",
+    "| GE    | 13.754330   | 0.0006716579  | 1.2838192  |\n",
+    "| GS    | 10.463861   | 0.0103470463  | 9.2050610  |\n",
+    "| HD    | 158.959614  | -0.0027874917 | 7.2751732  |\n",
+    "| IBM   | -35.685778  | 0.0109893315  | 4.5309059  |\n",
+    "| INTC  | -2.378091   | 0.0019549064  | 2.2268284  |\n",
+    "| JNJ   | 33.855770   | 0.0037188064  | 2.6888608  |\n",
+    "| JPM   | 42.582072   | 0.0011015650  | 3.7680066  |\n",
+    "| KO    | 26.414590   | 0.0008046107  | 1.0557201  |\n",
+    "| MCD   | 110.504144  | -0.0008779753 | 3.9126782  |\n",
+    "| MMM   | -44.856342  | 0.0113798013  | 3.7119309  |\n",
+    "| MRK   | -6.222425   | 0.0035744999  | 1.9765850  |\n",
+    "| MSFT  | 34.345438   | 0.0006028535  | 2.3818999  |\n",
+    "| NKE   | 251.852456  | -0.0084191331 | 9.0603493  |\n",
+    "| PFE   | 17.980153   | 0.0008492355  | 1.6345089  |\n",
+    "| PG    | -31.305411  | 0.0063229560  | 4.4014649  |\n",
+    "| TRV   | 68.210986   | 0.0019608476  | 2.9911744  |\n",
+    "| UNH   | 122.943990  | -0.0005916892 | 8.9702680  |\n",
+    "| UTX   | -155.186100 | 0.0149959961  | 4.9281090  |\n",
+    "| V     | 93.184150   | -0.0014373705 | 3.8318563  |\n",
+    "| VZ    | 11.334647   | 0.0019956060  | 1.1132384  |\n",
+    "| WMT   | -70.942748  | 0.0083456221  | 5.8924571  |\n",
+    "| XOM   | -41.291564  | 0.0071211814  | 4.2129147  |"
+   ]
   }
  ],
  "metadata": {
