Knit Q5 in HTML.

--- a/FE630 - Midterm/FE630 - Midterm ~ Q4 - Q6.Rmd
+++ b/FE630 - Midterm/FE630 - Midterm ~ Q4 - Q6.Rmd
@@ -128,6 +128,8 @@ results_df <- do.call(rbind, results)
 colnames(results_df) <- c("Intercept", "Beta", "Sigma_R")
 rownames(results_df) <- names(results)
 
+print(results_df)
+
 # Convert results_df into a data frame.
 results_df <- as.data.frame(results_df)
 
