--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -1048,7 +1048,8 @@
    "source": [
     "With your function $\\texttt{port}$ from the Question 2:\n",
     "\n",
-    "1. Use the set of input parameters $\\texttt{mu}$ (mean vector $\\mu$), $\\texttt{Qts}$ (covariance matrix $Q$ computed with a time series approximation), and $\\texttt{tau}$ (risk tolerance $\\tau$) to compute the efficient frontier corresponding to the maximization of utility function $U$ defined by $$U(h) = -\\frac{1}{2} h^T Q h + \\tau h^T \\mu$$ subject to the constraints $$0 \\leq h_i \\leq 0.1 \\; \\text{for all} \\; i, \\; \\text{and}$$ $$\\sum_{i = 1}^n h^T e = 1$$ where $n$ is the number of securities in the portfolio. Be  sure to include all constraints; both equality and inequality constraints."
+    "1. Use the set of input parameters $\\texttt{mu}$ (mean vector $\\mu$), $\\texttt{Qts}$ (covariance matrix $Q$ computed with a time series approximation), and $\\texttt{tau}$ (risk tolerance $\\tau$) to compute the efficient frontier corresponding to the maximization of utility function $U$ defined by $$U(h) = -\\frac{1}{2} h^T Q h + \\tau h^T \\mu$$ subject to the constraints $$0 \\leq h_i \\leq 0.1 \\; \\text{for all} \\; i, \\; \\text{and}$$ $$\\sum_{i = 1}^n h^T e = 1$$ where $n$ is the number of securities in the portfolio. Be  sure to include all constraints; both equality and inequality constraints.\n",
+    "2. Repeat the computation of the efficient frontier but now use the approximate covariance matrix $\\texttt{Qts}$ from the single index model instead of the time-series model $\\texttt{Qts}$."
    ]
   }
  ],
