--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -1049,7 +1049,10 @@
     "With your function $\\texttt{port}$ from the Question 2:\n",
     "\n",
     "1. Use the set of input parameters $\\texttt{mu}$ (mean vector $\\mu$), $\\texttt{Qts}$ (covariance matrix $Q$ computed with a time series approximation), and $\\texttt{tau}$ (risk tolerance $\\tau$) to compute the efficient frontier corresponding to the maximization of utility function $U$ defined by $$U(h) = -\\frac{1}{2} h^T Q h + \\tau h^T \\mu$$ subject to the constraints $$0 \\leq h_i \\leq 0.1 \\; \\text{for all} \\; i, \\; \\text{and}$$ $$\\sum_{i = 1}^n h^T e = 1$$ where $n$ is the number of securities in the portfolio. Be  sure to include all constraints; both equality and inequality constraints.\n",
-    "2. Repeat the computation of the efficient frontier but now use the approximate covariance matrix $\\texttt{Qts}$ from the single index model instead of the time-series model $\\texttt{Qts}$."
+    "2. Repeat the computation of the efficient frontier but now use the approximate covariance matrix $\\texttt{Qsi}$ from the single index model instead of the time-series model $\\texttt{Qts}$.\n",
+    "3. Plot the efficient frontier using the time-series approximation to $\\texttt{Qts}$ in blue, and superimpose the efficient frontier computed with the single index covariance model $\\texttt{Qsi}$ in red. Do you think the results are similar enough that the single-index covariance model is valid?\n",
+    "\n",
+    "Clearly describe all steps in your program with comments. List your program in your answer document. No points will be awarded unless the steps associated with each part of the question are clearly distinguished. Also, submit the source code file."
    ]
   }
  ],
