--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,35 @@
     "#     data['Date'] = pd.to_datetime(data['Date'], format='%Y%m%d')  # Convert the 'Date' column to DateTime\n",
     "#     data.set_index('Date', inplace=True)  # Set the 'Date' column as the index\n",
     "    \n",
-    "#     return data"
+    "#     return data\n",
+    "\n",
+    "def read_data(file_path: str) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Reads the data from a comma-delimited text file into a pandas DataFrame, \n",
+    "    setting the first valid row as the header and the first column as a DateTime index.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - file_path (str): The path to the data file.\n",
+    "\n",
+    "    Returns:\n",
+    "    - pd.DataFrame: A DataFrame with the Dow-Jones data, with correct column names and a DateTime index.\n",
+    "    \"\"\"\n",
+    "    # Read the file, assuming the first row is the header\n",
+    "    data = pd.read_csv(file_path, header=0)\n",
+    "    \n",
+    "    # Replace 'NaT' or similar placeholders in the first column with NaN and then drop rows with NaN in the index column\n",
+    "    data.iloc[:, 0] = pd.to_datetime(data.iloc[:, 0], errors='coerce')\n",
+    "    data = data.dropna(subset=[data.columns[0]])\n",
+    "    \n",
+    "    # Rename columns if they are unnamed, e.g., 'Unnamed: X' by using a prefix and a range based on the number of columns\n",
+    "    unnamed_columns = data.columns.str.contains('Unnamed')\n",
+    "    if any(unnamed_columns):\n",
+    "        data.columns = ['Date'] + [f'Col_{i}' for i in range(1, len(data.columns))]\n",
+    "    \n",
+    "    # Set the first column as the DateTime index\n",
+    "    data.set_index('Date', inplace=True)\n",
+    "    \n",
+    "    return data"
    ]
   },
   {
